# ChangeLog for net-p2p/freenet
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/freenet/ChangeLog,v 1.162 2013/02/06 21:13:48 tommy Exp $

*freenet-0.7.5_p1432 (06 Feb 2013)

  06 Feb 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7.5_p1423.ebuild, -freenet-0.7.5_p1424.ebuild,
  +freenet-0.7.5_p1432.ebuild:
  Version bump, drop old

*freenet-0.7.5_p1424 (12 Jan 2013)

  12 Jan 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +freenet-0.7.5_p1424.ebuild:
  Version bump

*freenet-0.7.5_p1423 (20 Dec 2012)

  20 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7.5_p1419.ebuild, -freenet-0.7.5_p1421.ebuild,
  -freenet-0.7.5_p1422.ebuild, +freenet-0.7.5_p1423.ebuild:
  Version bump, drop old, fix license, fixes bug 446618 with thanks to ulm

*freenet-0.7.5_p1422 (30 Oct 2012)

  30 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +freenet-0.7.5_p1422.ebuild, +files/freenet-0.7.5_p1422-wrapper.conf:
  Version bump, update and cleanup the wrapper config

*freenet-0.7.5_p1421 (25 Oct 2012)

  25 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +files/0.7.5_p1321-ext.patch, +freenet-0.7.5_p1421.ebuild:
  Version bump

*freenet-0.7.5_p1419 (14 Oct 2012)

  14 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7.5_p1417.ebuild, +freenet-0.7.5_p1419.ebuild:
  Version bump, drop old, finally fix bug 429716

*freenet-0.7.5_p1417 (28 Sep 2012)

  28 Sep 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7.5_p1411.ebuild, -freenet-0.7.5_p1413.ebuild,
  +freenet-0.7.5_p1417.ebuild:
  Version bump, drop old

*freenet-0.7.5_p1413 (13 Sep 2012)

  13 Sep 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +freenet-0.7.5_p1413.ebuild:
  Version bump

*freenet-0.7.5_p1411 (11 Sep 2012)

  11 Sep 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7.5_p1406.ebuild, -freenet-0.7.5_p1407.ebuild,