@@ -12,17 +12,20 @@ AUX freenet.old 452 SHA256 b3047b40128bbd7843dc370ab0aa150a9836ed789f48181bd6d8f
 AUX libraryloader-revert-using-of-absolute-path.patch 854 SHA256 b8bc840cc0c35a32bf000c23bdb5a7c7cb30508f6f39e3a3d29bb149996e6209 SHA512 24627e9f30a1b4456bf386ebc0a789e6c1d8670d4c1371b2d658cf04f9a04c09dc91ac803af0b8f883578cf9b3b351da69c7f882f7bdf3277f183134219b4889 WHIRLPOOL 6a328c040c81548bc77452639e2a0752304ef639480258b34d6d4ae15b0009d766a18df90f5685d4f2891a71188c19788675a65d8912560afb9a9fdfa0e9261e
 AUX run.sh-20090501 16217 SHA256 470aa99d083a16d2f620282502a59546611f1903e21aef50b93b10d9fada7d7a SHA512 ba97f1e370ffb7c9ea109b7d529430581a588d8d7e121ec09865e9e8932f2901477f7f43e7d0b95c7c95c2c42db05870e5d811528f91f78b48b68a539c804e67 WHIRLPOOL 201c2541da742ae0c211d6b736914340dd06d4907326de5a0073b39e8aa0a60933ed7d4eef3aa86465f9d0c2e0bf5bd78ed85d3c83c08ba9b50aabc25853864e
 DIST freenet-0.7.5_p1432.zip 4574023 SHA256 ba7ff02bb68e1b91c3f5bc41201436b0b92d26cbac59ef86e52f4970d1d3756c SHA512 30f07d65826a3578e0f38085e34ef9a1c9ede34405066ab2ce7c2447bc5588fc43a6e1dfc6687bf1daccda7ec39ef10deb0ef3fae0446b9fc0b5d2811dd3b6bf WHIRLPOOL f197acb3386084ec9ccdaec8427e65a5912fb182da1061fbda2e828e86a19efa125a248f5364c039ef82f99ab580e8c235aa210e9780f236a94a16fe061fd0cf
+DIST freenet-0.7.5_p1433.zip 4578236 SHA256 eafe12fd78c989b2ee3ce6d1763174cf852dc4d5cc87612628176d6fcf8be2da SHA512 3649374d5962d774d344ee649be091db7549ee84876344b3d2251dcf56f38ad6f6ad16e3a9fad95efcdc19b3641d916d8d4d1fee719387ee392156585ae86c8e WHIRLPOOL 4aa39fc59d05760571867f76a3372f54c5324b72b24148d312481a8c01a57ac92a87579a5d1ad796914e530769164cf546147e14d171c135d5d1809c19504485
 DIST freenet-ant-1.7.1.jar 1327167 SHA256 634e0b616d65d611419920e8b379b7b66399e44f520baa772147ed73743433b1 SHA512 2c84378d995fed0630169fffab020bde89c3edb7b3bc1e14e2251ed71be684dc2520fdeed8bae382de362984e25a31dcd59326ef8735f8066166c1e8d98ca408 WHIRLPOOL 667be2b1581c5fd847907b63522a0f83c595a6b8f1805d714e978a5cb0f05de4804153c89605618adf5c3b097a7019e7d7e9de0bf0987c7b1adb0dbc54e0f055
 DIST seednodes-20121030.fref.bz2 9181 SHA256 c71fc9addf7f81208822e59baf2d9ae7f3399c8881360511a7b8926012050b57 SHA512 e079ba7a7752774332862b6332ccff4cd221e53a42b14a795e4c12caca9f7448df67250e8bc456251dafff60048af10a06a83fdc1a04f71b3bb722500d064f2d WHIRLPOOL 4b7b6112680134f6c26ee4bfad0cfe1b2cc2063ef91215c93c562247c7089934df5c78b7fc5e570c4f9a89b3b5574e643917c6961a6b8476a5c98e2689cd2712
+DIST seednodes-20130218.fref.bz2 9194 SHA256 9ac006dc994456ef34f81b070a3dba6574f209fc2ea3413f57f66f0b5dde77a2 SHA512 42539e0471b44be83bcb2cc473217482099f7800d97fd642401607d6d99da4f0ea25c8dc974025d34665607a7f787a37137e4d839b047bca2f1f4d42b8363fe2 WHIRLPOOL 9a4ebbf703f9da7e427fd95ac6b4afbe6f4dd632b09362fbe7504d8606e8b9be768e39cfae82e211bd656e0748b5006e96ab4f4ceb3b9fcf60782a0f062fb8c2
 EBUILD freenet-0.7.5_p1432.ebuild 4275 SHA256 517734f9ecfec6e921c3107b7bc2205fa9de4682682eda4d4364f0cbf54b2e8c SHA512 be435d805d2392c8635f5daaf35988b3383a8d721813129ed4be6924efd2809cf5b769c3272d834e45a853d4c0a765cc2c91b68cb08f22336d184897b0ac0d17 WHIRLPOOL 68fe08b027435616d94f8a561de271ffe4bcaba95b50d8798fb7172d9fb6d7989cc7a67b6307ff6e7f4b4f12c1fdbe6b7e7e8f5838f02f87d8e7f19e371f058f
-MISC ChangeLog 22177 SHA256 b5d16100d57757aa16c9a404f012d6caeb24f1f20b5b8946c036e90485cd9a11 SHA512 d3becfa3f56906fe7e1bd4141bc758c35d953a4c7f7e769b89781658660c2fe657d6f1e57c4d437c858d1e9230c99f05f72dcedffbc6ea8322c72a033e4d91fa WHIRLPOOL c2f4379a6958c6db79323ebe3e692b17b7a0e40ccd1c0ccc8b8cd6ec6eb174142d7dbda9aeb154d94eca96d36bdb22877cabbd97c596ce527a7db28827ee6432
+EBUILD freenet-0.7.5_p1433.ebuild 4275 SHA256 ab7c867dfefaa45b5080ed91f5519f175182a455ccce9af019161b133b1439a6 SHA512 59ba8b3cf6a2224fc7865797455899de686aa15d70d036684ad4ac08f21e34d4da9444110a82b764dffc51ea815690ce4e7b967095fa6c45193b68e9b3b80251 WHIRLPOOL 05cf76ef71250d10ad16813f5288a3cd5f65af10c145e7841315bc16e08ad58ea771a77da463a05a81281644d3016895c2eeef62a51d50a3828bf4909fc86ba2
+MISC ChangeLog 22319 SHA256 65f11c83b8580cec36b1178ebfd7991c55535436c7da9ac20d0c96435be880b0 SHA512 c85b9519fa18c1b2c613b9f6e17cf2273716de146e0ab61a1cd7c38317a4acc2694a635ba49838c2adb50e0d0939d63b994b18d146fe79bab71702790c4acef2 WHIRLPOOL 517fe07e284a271fac25989952fab287bb6ffd82e439447cd5763163389967c458c6173fed9559ff7a4a6d3dee7f68786e6ee1c8aefe0fd3e2ae18050e015a93
 MISC metadata.xml 243 SHA256 76e8c4cafe92af4eb083e9682c375a2f887458dac6ce8f2982976a96abcf8219 SHA512 92bf36a1bad3877a5a981271afa7381a38f3cc87267233205af5aa0ad53c455d851bb1d9ff60fe02eda49a3347c497c5bfeaa4c160542abd62d81a0450c4b77f WHIRLPOOL 18fde625e32450606e852e52f034c73d6514284aa19842867313432d1ab1cc1d40ceae766c0c61b927a7b5c3917a6624c8e875583f49c0d5951797cf66e8ff95
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAlESx5UACgkQG7kqcTWJkGfDlQQAyTFPMOHtVjHZAFTML1d1Zopg
-gpvE5gBeQOLHUNe4iL0HLw1zOe+9npnqCNpZVe8hxq3Mte3FZBqeXEm1PjJn6CdZ
-iveP8cZgOACFPtQcGomdLYUKqgoNtf1EoNbnnOk12xhRhya+G56O1YTkQygRcN9M
-u3IDJbMa5jRSfPtmNH8=
-=mIcG
+iJwEAQEIAAYFAlEih98ACgkQG7kqcTWJkGeDfgP/XdXDB6Q4zZT+RhV1mChaLC1t
+bRdi19W6FTzHv8+7AzwRU9j/AYXLUWGBu1nbqXqNsoMGbRyPeB0EQWcLpa84QrAI
+jrN8/TYrOrwrhuZu0M+hoCa077sG29TymDGa1eKMVPGYecFS9z2g+WQJ2sdev0cZ
+H/Bg3VH8YOZW3waZJHw=
+=W4qu
 -----END PGP SIGNATURE-----
